<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="#F7F7F7">

    <Button
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:textAllCaps="false"
        android:backgroundTint="#FFA500"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_password"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/edtCurrentPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/current_password"
        android:inputType="textPassword"
        android:layout_marginTop="25dp"/>

    <EditText
        android:id="@+id/edtNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:layout_marginTop="12dp"/>

    <EditText
        android:id="@+id/edtConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_new_password"
        android:inputType="textPassword"
        android:layout_marginTop="12dp"/>

    <Button
        android:id="@+id/btnChangePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_password"
        android:textAllCaps="false"
        android:backgroundTint="#FFA500"
        android:layout_marginTop="20dp"/>

</LinearLayout>